# ChatBot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py  系统使用说明书.md  项目需求.md
.streamlit/: config.toml
backend/: audit.py  auth.py  config.py  database.py  evaluation.py  main.py  schemas.py  security.py
backend/models/: embedding.py  llm.py
backend/rag/: documents.py  graph.py  ingestion.py  lexical.py  loaders.py  retrieval.py  splitter.py  tools.py  types.py  vector_store.py
backend/routes/: admin.py  auth.py  chat.py
docs/: 项目文件说明.md
evaluation/: questions.json
frontend/admin/: app.py
frontend/user/: app.py
scripts/: evaluate_rag.py
tests/: conftest.py  debug_auth.py  e2e_full.py  e2e_test.py  e2e_ui_test.py  run_e2e.py  test_config.py  test_evaluation.py  test_lexical_retrieval.py  test_rag_pipeline.py  test_security_basics.py
