[project]
name = "chatbot"
version = "0.1.0"
description = "宁波工程学院网安学院问答机器人 · LangChain + LangGraph + RAG + Streamlit"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-huggingface>=0.1.0",
    "sentence-transformers>=3.0.0",
    "chromadb>=0.5.0",
    "streamlit>=1.40.0",
    "python-dotenv>=1.0.0",
    "langchain-deepseek>=0.1.0",
    "pypdf>=5.0.0",
    "docx2txt>=0.8",
    "langchain-chroma>=1.1.0",
    "torchvision>=0.27.0",
    "fastapi>=0.138.0",
    "uvicorn[standard]>=0.49.0",
    "httpx>=0.28.1",
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "werkzeug>=3.1.8",
    "playwright>=1.60.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[dependency-groups]
dev = []
